@@ -22,7 +22,7 @@ jobs:
     - name: setup Python
       uses: actions/setup-python@v6
       with:
-        python-version: "3.13"
+        python-version: "3.14"
     - run: python -m pip install tox
     - name: Build package
       run: tox -e build
